minor style changes

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -72,7 +72,7 @@
         "by-update": "Most recently updated",
         "already-approved": "Story already approved",
         "approve-story": "Approve this story",
-        "initial_version": "Initial version of the story",
+        "initial-version": "Initial version of the story",
         "new-to-old": "New to old",
         "old-to-new": "Old to new",
         "by-name": "By name",
@@ -220,7 +220,7 @@
         "none-of-the-above": "None of the above"
     },
     "user": {
-        "hit-counts": "מונה הכניסות",
+        "hit-counts": "Entries counter",
         "login": "Sign in",
         "logout": "Sign out",
         "please-login": "Please sign in",
@@ -249,13 +249,13 @@
         "chat-rooms": "Chat rooms",
         "chats": "Discussions",
         "font-size": "Select font size",
-        "login-successful": "You have logged in successfuly",
+        "login-successful": "You have logged in successfully",
         "share": "Copy the address",
         "number-of-hits": "Number of entries",
         "customize": "Customize",
         "customize-dictionary": "Customize any text",
         "personalize": "Personalize",
-        "select_langauage": "Select language",
+        "select-langauage": "Select language",
         "select-colors": "Select colors",
         "sharing": "Sharing",
         "enter-text-to-replace": "Find the text to be replaced, then right-click on it",
@@ -321,7 +321,7 @@
         "uploaded-by-anyone": "Photos from any source",
         "enter-date": "Date or year",
         "upload-in-progress": "Upload in progress...",
-        "photos-uploaded": "Successfuly uploaded - ",
+        "photos-uploaded": "Successfully uploaded - ",
         "photos-duplicate": "Duplicate photos - ",
         "left": "Left",
         "failed": "Failed - ",
@@ -418,7 +418,7 @@
         "apply-to-selected": "Tag the selected videos",
         "video-name": "Name the video clip",
         "send": "Send",
-        "message-successful": "Video was successfuly added",
+        "message-successful": "Video was successfully added",
         "duplicate": "Video clip already exists",
         "unknown-video-type": "Unknown video type",
         "next": "Page forward",
@@ -465,7 +465,7 @@
         "select-docs": "Select documents",
         "apply-to-selected": "Tag the selected documents",
         "upload-in-progress": "Upload in progress...",
-        "docs-uploaded": "Successfuly uploaded - ",
+        "docs-uploaded": "Successfully uploaded - ",
         "matching-docs": "Documents that contain the selected words",
         "docs-duplicate": "Duplicate documents - ",
         "categories": "Categories selection",
@@ -662,9 +662,9 @@
         "no-messages-to-merge": "No help topics to merge",
         "explain-accept-system": "Abandon your changes. Accept new system help message.",
         "promoted-story-expiration": "How many days to keep promoted story?",
-        "changes-successfuly saved": "Your changes were successfuly saved"
+        "changes-successfully-saved": "Your changes were successfully saved"
     },
-    "feedbacks": "משוב",
+    "feedbacks": "Feedback",
     "go-back": "Back",
     "parents": "Parents",
     "siblings": "Siblings",
