select language prompt done right

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -255,7 +255,7 @@
         "customize": "Customize",
         "customize-dictionary": "Customize any text",
         "personalize": "Personalize",
-        "select-langauage": "Select language",
+        "select-language": "Select language",
         "select-colors": "Select colors",
         "sharing": "Sharing",
         "enter-text-to-replace": "Find the text to be replaced, then right-click on it",
