revised file uploader. wip. shows signs...

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -320,6 +320,7 @@
         "uploaded-by-users": "Uploaded by users",
         "uploaded-by-anyone": "Photos from any source",
         "enter-date": "Date or year",
+        "upload-photos": "Upload Photos",
         "upload-in-progress": "Upload in progress...",
         "photos-uploaded": "Successfully uploaded - ",
         "photos-duplicate": "Duplicate photos - ",
