--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -318,6 +318,7 @@
         "uploaded-by-users": "הועלו על ידי משתמשים",
         "uploaded-by-anyone": "תמונות ממקור כלשהו",
         "enter-date": "תאריך או שנה",
+        "upload-photos": "העלאת תמונות",
         "upload-in-progress": "...התמונות נשלחות לשרת",
         "photos-uploaded": " - תמונות שהועלו בהצלחה",
         "photos-duplicate": " - תמונות שכבר הועלו בעבר",
