--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -288,7 +288,14 @@
         "quick-upload-photo": "Upload a photo",
         "advanced-options": "Advanced options",
         "advanced-options-off": "No advanced options",
-        "advanced-options-on": "Enable advanced options"
+        "advanced-options-on": "Enable advanced options",
+        "sharing": {
+            "facebook": "Share on Facebook",
+            "sub-title": "Sub title",
+            "card-description": "Description",
+            "continue": "Continue",
+            "share-on-facebook": "Share on Facebook"
+        }
     },
     "chats": {
         "chats": "Chats",
