--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -286,7 +286,14 @@
         "quick-upload-photo": "העלה תמונה משלך לאתר",
         "advanced-options": "אפשרויות מתקדמות",
         "advanced-options-off": "ללא אפשרויות מתקדמות",
-        "advanced-options-on": "הצג אפשרויות מתקדמות"
+        "advanced-options-on": "הצג אפשרויות מתקדמות",
+        "sharing": {
+            "facebook": "שיתוף בפייסבוק",
+            "sub-title": "כותרת משנה",
+            "card-description": "תיאור",
+            "continue": "המשך",
+            "share-on-facebook": "שתף בפייסבוק"
+        }
     },
     "chats": {
         "chats": "קבוצות דיון",
