--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -674,8 +674,10 @@
         "no-messages-to-merge": "אין הודעות עזרה שצריך למזג",
         "explain-accept-system": "ותר על ההתאמות וקבל את הודעת העזרה של המערכת",
         "promoted-story-expiration": "כמה ימים לשמור סיפור מְקוּדָם?",
-        "changes-successfuly-saved": "השינויים נשמרו בהצלחה",
-        "cover-photo": "תמונת השער"
+        "changes-successfully-saved": "השינויים נשמרו בהצלחה",
+        "cover-photo": "תמונת השער",
+        "select-cover-photo1": "כדי לקבוע תמונת שער, צא ומצא תמונה.",
+        "select-cover-photo2": "הקלק על אייקון השלשלת ואז חזור לכאן."
     },
     "go-back": "חזור",
     "parents": "הורים",
