--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -415,7 +415,8 @@
         "to-see-more": "כדי לראות יותר תמונות הקטן אותן. כשתגדיל אותן מספרן לא יקטן.",
         "mark-people": "סמן פרצופים",
         "mark-articles": "סמן אובייקטים",
-        "undo-last-change": "בטל את השינוי האחרון"
+        "undo-last-change": "בטל את השינוי האחרון",
+        "photo-detail": "סיפורה של התמונה"
     },
     "audios": {
         "audios": "הקלטות",
