--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -416,7 +416,8 @@
         "mark-people": "סמן פרצופים",
         "mark-articles": "סמן אובייקטים",
         "undo-last-change": "בטל את השינוי האחרון",
-        "photo-detail": "סיפורה של התמונה"
+        "photo-detail": "סיפורה של התמונה",
+        "set-slideshow-topics": "קבע כנושאים למצגת הפתיחה"
     },
     "audios": {
         "audios": "הקלטות",
