--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -278,6 +278,8 @@
         "site-description": "Site description for search engines",
         "feedback-off": "Hide feedback button",
         "feedback-on": "Display feedback button",
+        "exclusive-on": "Open for registered users only",
+        "exclusive-off": "Open for any one with the link",
         "quick-upload-off": "Hide quick upload button",
         "quick-upload-on": "Hide quick upload button",
         "version-time-on": "display version time",
@@ -288,6 +290,8 @@
         "advanced-options": "Advanced options",
         "advanced-options-off": "No advanced options",
         "advanced-options-on": "Enable advanced options",
+        "registered-only": "Only registered users may view this site",
+        "please-login-if": "If you are registered, please login",
         "sharing": {
             "sharing": "Sharing",
             "facebook": "Share on Facebook",
