wait for config (for closed sites)

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -288,7 +288,7 @@
         "advanced-options": "אפשרויות מתקדמות",
         "advanced-options-off": "ללא אפשרויות מתקדמות",
         "advanced-options-on": "הצג אפשרויות מתקדמות",
-        "registered-only": "רק משתמשים רשומים רשאים לצפות באתר זה",
+        "registered-only": "האתר פתוח למשתמשים רשומים בלבד",
         "please-login-if": "אם אתה משתמש רשום, אנא התחבר",
         "sharing": {
             "sharing": "שיתוף",
