revised videos. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -108,7 +108,8 @@
         "enter-book-name": "Enter book name",
         "story-date": "Story date",
         "prev-story": "Previous story",
-        "next-story": "Next story"
+        "next-story": "Next story",
+        "clear-all-filters": "Clear all filters"
     },
     "members": {
         "members": "Members",
