video thumbnails. user privilege video editor.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -665,6 +665,7 @@
         "archiver": "Archiver", 
         "tester": "Tester",
         "restricted": "Restricted",
+        "video_editor": "Video editor",
         "duplicate-app-name": "Name is alrady in use!",
         "new-app-requested": "Your request is being processed",
         "app-name": "New site ID",
