audios upload. red messages ib server exceptions.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -270,6 +270,8 @@
         "enable-books-on": "אפשר ספרים",
         "enable-member-of-the-day-off": "ללא חבר היום",
         "enable-member-of-the-day-on": "אפשר חבר היום",
+        "enable-cuepoints-on": "כולל נקודות עצירה בסרטים",
+        "enable-cuepoints-off": "ללא נקודות עצירה בסרטים",
         "gallery": "גלריה",
         "audio-enabled": "אפשר הקלטות",
         "audio-disabled": "ללא הקלטות",
@@ -663,6 +665,7 @@
         "archiver": "ארכיונאי", 
         "tester": "בודק",
         "restricted": "עריכה עצמית בלבד",
+        "video_editor": "עורך סרטים",
         "duplicate-app-name": "מזהה האתר כבר תפוס!",
         "new-app-requested": "בקשתך בטיפול. אנא בדוק את תיבת הדואל שלך. אם לא קבלת הודעה תוך מספר דקות, בדוק את תיבת דואר הזבל.",
         "app-name": "מזהה האתר שלך (באותיות לועזיות)",
