--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -272,6 +272,8 @@
         "enable-books-on": "Enable books",
         "enable-member-of-the-day-off": "No member of the day",
         "enable-member-of-the-day-on": "Enable member of the day",
+        "enable-cuepoints-on": "Enable video cuepoints",
+        "enable-cuepoints-off": "Disable video cuepoints",
         "gallery": "Gallery",
         "audio-enabled": "Audio supported",
         "audio-disabled": "Audio not supported",
@@ -663,6 +665,7 @@
         "archiver": "Archiver", 
         "tester": "Tester",
         "restricted": "Restricted",
+        "video_editor": "Video editor",
         "duplicate-app-name": "Name is alrady in use!",
         "new-app-requested": "Your request is being processed",
         "app-name": "New site ID",
