cosmetics in videos page

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -641,8 +641,8 @@
         "tablet": "Tablet",
         "smartphone": "Smartphone",
         "header-text": "<p>Your feedback is important.</p>",
-        "bad-message": "What I do not like in the site",
-        "good-message": "What I like in the site",
+        "bad-message": "What I do not like in the site. Mandatory if 'like' side is empty.",
+        "good-message": "What I like in the site. Mandatory if 'dont like' side is empty.",
         "name": "Name. Not mandatory!",
         "email-address": "Email address. Mandatory!",
         "message-successful": "Your message was succesfully sent",
