--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -641,8 +641,8 @@
         "tablet": "טבלט",
         "smartphone": "טלפון חכם",
         "header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
-        "bad-message": "מה אינני אוהב באתר",
-        "good-message": "מה אני אוהב באתר",
+        "bad-message": "מה אינני אוהב באתר. חובה למלא אם לא מלאת מה את.ה אוהב.ת",
+        "good-message": "מה אני אוהב באתר. חובה למלא אם לא מלאת מה את.ה לא אוהב.ת",
         "name": "שם. לא חובה!",
         "email-address": "כתובת דואר אלקטרוני. חובה למלא!",
         "message-successful": "המשוב שלך נשמר בהצלחה",
