--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -643,7 +643,7 @@
         "header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
         "bad-message": "מה אינני אוהב באתר. חובה למלא אם לא מלאת מה את.ה אוהב.ת",
         "good-message": "מה אני אוהב באתר. חובה למלא אם לא מלאת מה את.ה לא אוהב.ת",
-        "name": "שם. לא חובה!",
+        "name": "שם",
         "email-address": "כתובת דואר אלקטרוני. חובה למלא!",
         "message-successful": "המשוב שלך נשמר בהצלחה",
         "device-details": "פרטי המכשיר"
