--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -450,6 +450,7 @@
         "photographer-name": "Photographer name",
         "unknown-photographer": "Unknown",
         "promote-selected-videos": "Promote selected videos",
+        "delete-selected-videos": "Delete selected videos",
         "filter": "Fast search in video titles",
         "edit-filters": "Topics and keywords",
         "add-cue": "Create stopping point",
