--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -470,6 +470,7 @@
         "photographer-name": "שם הצלם",
         "unknown-photographer": "לא ידוע",
         "promote-selected-videos": "קדם את הסרטונים שנבחרו",
+        "delete-selected-videos": "מחק את הסרטים שנבחרו",
         "filter": "חפוש מהיר בשמות הסרטונים",
         "edit-filters": "נושאים וצלמים",
         "add-cue": "הוסף קטע",
