--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -429,7 +429,9 @@
         "photo-detail": "View photo details",
         "set-slideshow-topics": "Slide show topics",
         "slideshow-topics-saved": "Slideshow topics saved",
-        "exclude-from-main-slideshow": "Exclude from main slideshow"
+        "exclude-from-main-slideshow": "Exclude from main slideshow",
+        "save-selected-photos": "Save the changes",
+        "cancel-selected-photos": "Cancel the changes"
     },
     "videos": {
         "videos": "Video",
