detach last member from stiry or video

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -417,6 +417,7 @@
         "cancel-indentification": "Cancel the identification",
         "chronological-order": "Chronological order",
         "chronological-order-reverse": "Chronological order reversed",
+        "alphabetical-order": "Alphabetical order",
         "edit-face-location": "Edit face location",
         "click-to-identify": "Click on a face to identify a person",
         "click-to-identify-article": "Click on an article to identify it",
