--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -415,6 +415,7 @@
         "cancel-indentification": "בטל את הזיהוי",
         "chronological-order": "סדר כרונולוגי",
         "chronological-order-reverse": "סדר כרונולוגי הפוך",
+        "alphabetical-order": "סדר אלפביתי",
         "edit-face-location": "לעריכת מיקום וגודל המעגל, לחץ על הכפתור הימני של העכבר או גרור את שפת המעגל או את תוכו",
         "click-to-identify": "הקלק על פרצוף כדי לזהותו",
         "click-to-identify-article": "הקלק על אובייקט כדי לזהותו",
