--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -308,6 +308,10 @@
             "missing-photo": "לא נבחרה תמונה! צא ממסך זה, הקלק על התמונה הרצויה, הקלק על סמל השלשלת ואז חזור לכאן"
         }
     },
+    "gallery": {
+        "gallery": "גלריה",
+        "set-app-active": "כלול בגלריה"
+    },
     "chats": {
         "chats": "קבוצות דיון",
         "enter-your-message": "הקלד את הודעתך",
