share on facebook with padded photo

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -304,7 +304,7 @@
             "card-description": "תיאור",
             "continue": "המשך",
             "share-on-facebook": "שתף בפייסבוק",
-            "photo-link-copied": "כתובת התמונה הועתקה בהצלחג",
+            "photo-link-copied": "כתובת התמונה הועתקה בהצלחה",
             "replace-photo": "להצגת תמונה אחרת, צא מחלון זה, הקלק על התמונה הרצויה, הקלק על סמל השלשלת ואז חזור לכאן",
             "missing-photo": "לא נבחרה תמונה! צא ממסך זה, הקלק על התמונה הרצויה, הקלק על סמל השלשלת ואז חזור לכאן"
         }
