--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -521,7 +521,8 @@
         "drag-left-and-right": "גרור כאן שמאלה וימינה",
         "edit-filters": "נושאים ומילות מפתח",
         "link-to-doc-created": "קישור למסמך מוכן להדבקה בעורך",
-        "click-to-close": "סגור את המסמך"
+        "click-to-close": "סגור את המסמך",
+        "view-details": "הצג/ערוך פרטים"
     },
     "terms": {
         "terms": "מונחים",
