--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -520,7 +520,8 @@
         "edit-filters": "Topics and keywords",
         "link-to-doc-created": "Link to the document is ready for pasting in the editor",
         "click-to-close": "Click to close",
-        "view-details": "View/edit details"
+        "view-details": "View/edit details",
+        "doc-date": "Document date"
     },
     "terms": {
         "terms": "Terms",
