--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -527,7 +527,8 @@
         "view-details": "הצג/ערוך פרטים",
         "doc-date": "תאריך המסמך",
         "members-in": "חברים הקשורים למסמך",
-        "select-members": "בחר חברים הקשורים למסמך"
+        "select-members": "בחר חברים הקשורים למסמך",
+        "fullscreen": "לחזרה F11.תצוגה במסך מלא"
     },
     "terms": {
         "terms": "מונחים",
