--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -727,6 +727,7 @@
     "abcde": "אבגדה",
     "a": "א",
     "update": "עדכן",
+    "continue": "המשך",
     "date-hint": "הקלד שנה, שנה/חודש או שנה/חודש/יום",
     "please-update-head": "<p dir='rtl'>תוכנת האתר עודכנה</p>",
     "please-update-body": "<p dir='rtl'>הדף ייטען עכשיו מחדש<br><p>",
