modify system terms fixed

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -630,6 +630,7 @@
         "topic-name": "Topic name",
         "topic-description": "Topic description",
         "topic-title": "Edit topic name and description",
+        "locale-title": "Replace a term",
         "photographer-name": "Photographer name",
         "photographer-title": "Edit photographer name",
         "terminology-name": "",
