--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -630,6 +630,7 @@
         "topic-name": "שם הנושא",
         "topic-description": "תיאור הנושא",
         "topic-title": "ערוך את שם ותיאור הנושא",
+        "locale-title": "החלף מונח של המערכת",
         "photographer-name": "שם הצלם",
         "photographer-title": "ערוך את שם הצלם",
         "terminology-name": "",
