--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -299,6 +299,7 @@
         "advanced-options-on": "הצג אפשרויות מתקדמות",
         "registered-only": "האתר פתוח למשתמשים רשומים בלבד",
         "please-login-if": "אם אתה משתמש רשום, אנא התחבר",
+        "qrcode-name": "QR code file name",
         "sharing": {
             "sharing": "שיתוף",
             "facebook": "שיתוף בפייסבוק",
