ensure current_url is ready before qrcode

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -301,7 +301,7 @@
         "advanced-options-on": "Enable advanced options",
         "registered-only": "Only registered users may view this site",
         "please-login-if": "If you are registered, please login",
-        "qrcode-name": "QR code file name",
+        "qrcode-name": "QR code file name (English + digits only)",
         "sharing": {
             "sharing": "Sharing",
             "facebook": "Share on Facebook",
