--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -710,6 +710,7 @@
         "explain-accept-system": "ותר על ההתאמות וקבל את הודעת העזרה של המערכת",
         "promoted-story-expiration": "כמה ימים לשמור סיפור מְקוּדָם?",
         "changes-successfully-saved": "השינויים נשמרו בהצלחה",
+        "no-new-cover-photo-selected": "לא נבחרה תמונת שער חדשה",
         "cover-photo": "תמונת השער",
         "select-cover-photo1": "כדי לקבוע תמונת שער, צא ומצא תמונה.",
         "select-cover-photo2": "הקלק על אייקון השלשלת ואז חזור לכאן."
