--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -220,7 +220,9 @@
         "description": "הסבר",
         "answer-text": "הקלידו את התשובה",
         "clear-all": "נקה",
-        "none-of-the-above": "אף אחת מהתשובות"
+        "none-of-the-above": "אף אחת מהתשובות",
+        "none-of-the-above-default": "'אף תשובה' כמחדל",
+        "no-default": "ללא ברירת מחדל"
     },
     "user": {
         "login": "התחבר כעורך ",
