--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -287,6 +287,8 @@
         "gallery": "Gallery",
         "audio-enabled": "Audio supported",
         "audio-disabled": "Audio not supported",
+        "terms-enabled": "Terms enabled",
+        "terms-disabled": "Terms disabled",
         "site-title": "Site title",
         "site-description": "Site description for search engines",
         "feedback-off": "Hide feedback button",
